--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,6 +94,7 @@
 <div class="content" role="main">
 
   <h2>Hello world!</h2>
+  <p>Service Worker is <u *ngIf="!swPush.isEnabled">not</u> enabled. Come on dude!</p>
 
 </div>
 
